--- a/packages/hc_dispatcher_v2_helpers.yaml
+++ b/packages/hc_dispatcher_v2_helpers.yaml
@@ -66,3 +66,8 @@ input_text:
     name: "HC Dispatch Approved Batch (Active)"
     icon: mdi:fire
     initial: "none"
+
+  hc_dispatch_last_suggested_batch:
+    name: "HC Dispatch Last Suggested Batch"
+    icon: mdi:history
+    initial: "none"
